Replace raw html with shortcode